Fix GraphQL schema errors and artifact upload issues
PROBLEMS:
1. C2Profile operation_id field doesn't exist in Mythic schema
2. GetAttacksByOperation distinct_on/order_by mismatch
3. CI artifact names with invalid characters

FIXED:
1. C2Profile Schema Fixes:
   - Removed OperationID field from types.C2Profile struct
   - Removed Operation field (profiles are global, not per-operation)
   - Removed operation_id from GetC2Profiles GraphQL query
   - Removed operation_id from GetC2ProfileByID GraphQL query

2. Attack Query Fix:
   - Fixed GetAttacksByOperation order_by clause
   - Changed from order_by: {attack: {t_num: asc}}
   - To: order_by: {attack_id: asc}
   - This matches Hasura requirement: distinct_on columns must match initial order_by

3. CI Artifact Names:
   - Changed from using shell commands in artifact names (doesn't work in YAML)
   - Now use strategy.job-index for unique names
   - Fixes 'invalid character' errors in artifact upload

All schema errors should now be resolved! ✅

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -162,7 +162,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: integration-test-results-$(echo '${{ matrix.test-group }}' | tr ' :+' '_')
+          name: integration-test-results-${{ strategy.job-index }}
           path: integration-test-output-*.log
           retention-days: 7
 
@@ -180,7 +180,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: mythic-failure-logs-$(echo '${{ matrix.test-group }}' | tr ' :+' '_')
+          name: mythic-failure-logs-${{ strategy.job-index }}
           path: |
             /tmp/mythic/mythic-logs.txt
             /tmp/mythic/docker-containers.txt
